# netgraph

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
sample_data/: lldp_neighbors.txt  routing_table.txt  snmp_walk.txt  topology.json
src/netgraph/: __init__.py  cli.py
src/netgraph/api/: __init__.py  routes.py
src/netgraph/dashboard/: __init__.py  app.py
src/netgraph/dashboard/templates/: anomaly.html  impact.html  index.html  predict.html  topology.html
src/netgraph/detect/: __init__.py  anomaly.py
src/netgraph/graph/: __init__.py  features.py  temporal.py
src/netgraph/impact/: __init__.py  analysis.py
src/netgraph/ingest/: __init__.py  interface_collector.py  lldp_parser.py  routing_parser.py  snmp_walker.py
src/netgraph/models/: __init__.py  autoencoder.py  gat.py  gcn.py  layers.py  sage.py  training.py
src/netgraph/predict/: __init__.py  failure.py
src/netgraph/viz/: __init__.py  export.py
tests/: test_anomaly.py  test_api.py  test_features.py  test_impact.py  test_interface_collector.py  test_layers.py  test_lldp_parser.py  test_models.py  test_prediction.py  test_routing_parser.py  test_snmp_walker.py  test_temporal.py  test_training.py  test_viz.py
