[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netgraph"
version = "0.1.0"
description = "GNN-based Network Topology Intelligence Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Corey A. Wade", email = "cwccie@gmail.com"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["network", "topology", "gnn", "graph-neural-network", "anomaly-detection", "network-monitoring"]

dependencies = [
    "numpy>=1.24",
    "networkx>=3.0",
    "click>=8.0",
]

[project.optional-dependencies]
web = [
    "flask>=3.0",
]
all = [
    "flask>=3.0",
    "requests>=2.28",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/cwccie/netgraph"
Documentation = "https://github.com/cwccie/netgraph#readme"
Repository = "https://github.com/cwccie/netgraph"
Issues = "https://github.com/cwccie/netgraph/issues"

[project.scripts]
netgraph = "netgraph.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
